<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="in.co.vsys.shetkariapp.in.co.SMRK.shetkariapp.activity.MyProfileDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar1"
        android:titleTextColor="#ffffff"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_backArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/ic_arrow_back_white_24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logoo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_curv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                >


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                <EditText
                    android:id="@+id/edt_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/first_name"
                    android:drawableLeft="@mipmap/ic_action_person"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_curv"

            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_userLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <EditText
                    android:id="@+id/edt_userLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/last_name"
                    android:drawableLeft="@mipmap/ic_action_person"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"


                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_curv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/profile_state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:ms_arrowColor="@color/colorPrimary"
                app:ms_arrowSize="16dp"
                app:ms_floatingLabelText="@string/title_manage_crop"
                app:ms_hint="@string/select_state"

                >

            </fr.ganfra.materialspinner.MaterialSpinner>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_curv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                >

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/profile_district_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:ms_arrowColor="@color/colorPrimary"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelText="@string/district"
                    app:ms_hint="@string/select_district"

                    >

                </fr.ganfra.materialspinner.MaterialSpinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_curv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                >

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/profile_taluka_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:ms_arrowColor="@color/colorPrimary"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelText="@string/taluka"
                    app:ms_hint="@string/select_taluka"
                    >

                </fr.ganfra.materialspinner.MaterialSpinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_curv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"


                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_userVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/edt_user_MYPRof_Village"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/gav"
                        android:inputType="text"
                        android:drawableLeft="@mipmap/ic_action_location_on"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_myprofile_submit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_registration"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittext_curv"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
